--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="container__LogoMidias">
         <div class="logo">
-          <p>Pharma</p>
+          <p>Local</p>
           <img src="assets/img/logo.png" width="180px" alt="Logo PetShop" />
         </div>
         <div class="midias_sociais">
@@ -57,14 +57,14 @@
 
     <section id="banner">
       <div class="container">
-        <h1>Pharma PetShop</h1> <br>
+        <h1>Local PetShop</h1> <br>
         <h2>O pet shop feito por quem ama pets e é louco por eles.</h2>
       </div>
     </section>
 
     <section class="caracteristicas">
         <h2>Tudo que seu pet precisa em um só lugar.</h2>
-        <p>Pharma PetShop reúne os melhores produtos do segmento pet em um único lugar! Acreditamos que os animais são companheiros para toda a vida, por isso, temos o intuito de levar comodidade aos tutores de bichos, trazemos praticidade para os cuidados de cachorros, gatos, roedores, peixes, aves e outros pets. <br> Oferecer produtos de qualidade, cuidar e tratar bem de quem amamos é a nossa essência! Com alguns cliques é possível conferir alimentos, medicamentos, produtos de higiene e outros itens para o cuidado de animais domésticos.</p>
+        <p>Local PetShop reúne os melhores produtos do segmento pet em um único lugar! Acreditamos que os animais são companheiros para toda a vida, por isso, temos o intuito de levar comodidade aos tutores de bichos, trazemos praticidade para os cuidados de cachorros, gatos, roedores, peixes, aves e outros pets. <br> Oferecer produtos de qualidade, cuidar e tratar bem de quem amamos é a nossa essência! Com alguns cliques é possível conferir alimentos, medicamentos, produtos de higiene e outros itens para o cuidado de animais domésticos.</p>
         <hr>
         <ul class="grid">
             <li><img src="assets/img/icones/location.png" width="80px">
